# HeR-T-Retraining

./: .gitignore  README.md  pyproject.toml  requirements.txt  training.sh
data/: __init__.py  data_loader.py  donut_dataset.py  donut_pytorch_lightning_dataloader.py
data/.ipynb_checkpoints/: custom_dataset-checkpoint.py  donut_dataset-checkpoint.py  donut_pytorch_lightning_dataloader-checkpoint.py
experiments/: config.yaml  inference_config.yaml  pl_config.yaml  train_config.yaml
models/: __init__.py  donut_pytorch_lightning.py
models/.ipynb_checkpoints/: batchTransfer-checkpoint.sh  config-checkpoint.json  donut_pytorch_lightning-checkpoint.py  tokenizer-checkpoint.json
models/__MACOSX/donut-base/: ._added_tokens.json  ._config.json  ._preprocessor_config.json  ._sentencepiece.bpe.model  ._special_tokens_map.json  ._tokenizer.json  ._tokenizer_config.json
notebooks/: devtest_dataset.ipynb  fine_tuning.ipynb  kaggle_finetuning.ipynb  scratch_training.ipynb  training_trial.ipynb
notebooks/.ipynb_checkpoints/: devtest_dataset-checkpoint.ipynb  fine_tuning-checkpoint.ipynb  test_evaluation-checkpoint.ipynb  training_trial-checkpoint.ipynb
notebooks/wandb/: latest-run
scripts/: inference.py  train.py  training.py
shell/: submit.sbatch  submit.sh
src/her_t_pytorch_lightning/: __init__.py  dataset_loader.py  her_t_pytorch_lightning.py  utils.py
training/: retraining.py
utils/: __init__.py  helpers.py  parserEvaluation.py  push_to_hub.py
utils/.ipynb_checkpoints/: confidential-checkpoint.py  push_to_hub-checkpoint.py
(+5 files in other folders)
